[package]
name = "unicorn"
version = "1.0.1"
authors = ["Lukas Seidel", "deadash <dead.ash@hotmail.com>"]
documentation = ""
edition = "2018"
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/edsky/unicorn-rs.git"
description = "Rust bindings for the Unicorn emulator with utility functions"
build = "build.rs"
links = "unicorn"

[dependencies]
bitflags = "1.0"
libc = "0.2"
capstone="0.6.0"
memmap2 = "0.1.0"

[build-dependencies]
vcpkg = "0.2"